# benchmarks

./: .gitignore  CMakeLists.txt  README.md  RESULTS.md  script.sh
.github/workflows/: benchmark.yml
benchmarks/: CMakeLists.txt  fmtlib_fmt.cpp  fmtlib_fmt_batch.cpp  jeaiii_itoa.cpp  jeaiii_itoa_batch.cpp  null.cpp  simditoa.cpp  simditoa_batch.cpp  simditoa_homogeneous.cpp  std_to_chars.cpp  std_to_chars_batch.cpp  tencent_rapidjson.cpp  tencent_rapidjson_batch.cpp  yy_itoa.cpp  yy_itoa_batch.cpp
common/: bench_data.hpp
scripts/: build-and-run.sh  run-bench.sh  summarize.py
terraform/: main.tf  outputs.tf  variables.tf
